fix: double section wrapping

--- a/src/styles/layout/Column.css
+++ b/src/styles/layout/Column.css
@@ -1,4 +1,6 @@
 .column-child-container {
   display: grid;
+  align-content: start;
   row-gap: 1em;
+  max-width: 680px;
 }
